input sanitation for date timestamps